--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="home">
   <div class="header">
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <img src="assets/lavitztext.png" alt="Lavitz.io" class="" id="logo" />
       </a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -35,7 +35,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="bis.html">Pre-Raid BiS</a>
+          <a class="nav-item nav-link" href="/bis">Pre-Raid BiS</a>
           <a class="nav-item nav-link disabled" href="#">Macros</a>
           <a class="nav-item nav-link disabled" href="#">Blog</a>
         </div>
