--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <meta name="keywords" content="lavitz,classic wow,classic world of warcraft,mage,mage guide,mage tips,mage leveling,speedleveling,mage bis list">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Fontawesome -->
   <!-- <link href="sass/fontawesome-all.min.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="home">
   <div class="header">
@@ -92,18 +92,20 @@
         <div class="card">
           <div class="card-body">
             <p class="card-text">
-              <a href="https://www.youtube.com/watch?v=gIfQ5hVS3Us">[VIDEO] How to acquire douses to summon Ragnaros FAST - A mage's job</a>
+              <a href="https://www.youtube.com/watch?v=gIfQ5hVS3Us">[VIDEO] How to acquire douses to summon Ragnaros FAST - by me :)</a>
             </p> 
           </div>
         </div>
       </div>
-    </div>
-  </div><!-- .row -->
+     </div>
+    </div><!-- .row -->
+  </div>
 
   <!-- Bootstrap JS -->
   <script src="js/jquery-3.3.1.slim.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-</body>
+  <script src="js/main.js"></script>
 
+</body>
 </html>
