--- a/bis.html
+++ b/bis.html
@@ -12,10 +12,10 @@
     content="lavitz,classic wow,classic world of warcraft,mage,mage guide,mage tips,mage leveling,speedleveling,mage bis list">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
   <!-- Fontawesome -->
   <!-- <link href="sass/fontawesome-all.min.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body class="bis">
@@ -492,10 +492,10 @@
 
 
   <!-- Bootstrap JS -->
-  <script src="js/jquery-3.3.1.slim.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-3.3.1.slim.min.js"></script>
+  <script src="/js/popper.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
