--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <meta name="keywords" content="lavitz,classic wow,classic world of warcraft,mage,mage guide,mage tips,mage leveling,speedleveling,mage bis list">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
   <!-- Fontawesome -->
   <!-- <link href="sass/fontawesome-all.min.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body class="home">
   <div class="header">
