Attempt to fix css file

--- a/bis.html
+++ b/bis.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Fontawesome -->
   <!-- <link href="sass/fontawesome-all.min.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="main1.css">
 </head>
 
 <body class="bis">
