--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="assets/lavitzico.png" />
   <meta name="author" content="Lavitz">
-  <meta name="description" content="Lavitz, Classic WoW Mage">
+  <meta name="description" content="Classic WoW Mage">
   <meta name="keywords" content="lavitz,classic wow,classic world of warcraft,mage,mage guide,mage tips,mage leveling,speedleveling,mage bis list">
 
   <!-- Bootstrap CSS -->
