--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="card-body">
               <h5 class="card-title color-epic">Project "Speed"</h5>
               <h6 class="card-subtitle mb-2 text-muted" style="font-style: italic">Coming soon™</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text"><small>it'll be released when it's done :)</small></p>
               <!-- <a href="#" class="card-link">Card link</a> -->
             </div>
           </div>
