--- a/bis.html
+++ b/bis.html
@@ -24,15 +24,22 @@
       <a class="navbar-brand" href="/">
         <img src="assets/lavitztext.png" alt="Lavitz.io" class="" id="logo" />
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"><img src="assets/PowerDown.png" alt=""></span>
+        <span class="powerdown"><img src="assets/PowerDown.png" alt=""></span>
+        <span class="powerup"><img src="assets/PowerUp.png" alt=""></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/bis">Pre-Raid BiS</a>
           <a class="nav-item nav-link disabled" href="#">Macros</a>
           <a class="nav-item nav-link disabled" href="#">Blog</a>
+          <div class="navright">
+              <a class="nav-item nav-link twitter" href="https://twitter.com/Lavitz_io">Twitter</a>
+              <button type="button" class="btn discord" data-toggle="tooltip" data-placement="bottom" title="Lavitz#1337">
+                  Discord
+                </button>
+            </div>
         </div>
       </div>
     </nav>
