--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="nav-item nav-link disabled" href="#">Macros</a>
           <a class="nav-item nav-link disabled" href="#">Blog</a>
           <div class="navright">
-            <a class="nav-item nav-link" href="https://twitter.com/Lavitz_io">Twitter</a>
+            <a class="nav-item nav-link twitter" href="https://twitter.com/Lavitz_io">Twitter</a>
             <button type="button" class="btn discord" data-toggle="tooltip" data-placement="bottom" title="Lavitz#1337">
                 Discord
               </button>
