Remove focus outline from navbar collapse button

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <!--
     hi
 
-    https://www.youtube.com/watch?v=hQoN8Daltfc
-
     all assets belonging to Blizzard Entertainment or Sony are credited here with this statement, thanks
   -->
   <title>Lavitz.io</title>
@@ -17,7 +15,7 @@
   <meta name="keywords" content="lavitz,classic wow,classic world of warcraft,mage,mage guide,mage tips,mage leveling,speedleveling,mage bis list">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Fontawesome -->
   <!-- <link href="sass/fontawesome-all.min.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="main1.css">
@@ -35,7 +33,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/bis">Pre-Raid BiS</a>
+          <a class="nav-item nav-link" href="/bis">Mage Pre-Raid BiS</a>
           <a class="nav-item nav-link disabled" href="#">Macros</a>
           <a class="nav-item nav-link disabled" href="#">Blog</a>
           <div class="navright">
