--- a/bis.html
+++ b/bis.html
@@ -31,7 +31,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/bis">Pre-Raid BiS</a>
+          <a class="nav-item nav-link" href="/bis">Mage Pre-Raid BiS</a>
           <a class="nav-item nav-link disabled" href="#">Macros</a>
           <a class="nav-item nav-link disabled" href="#">Blog</a>
           <div class="navright">
@@ -495,8 +495,6 @@
       
     <p class="color-mage my-4 py-4">Special thanks to Infra &amp; Frothy! &lt;3</p>
   </div>
-
-
 
   <!-- Bootstrap JS -->
   <script src="js/jquery-3.3.1.slim.min.js"></script>
