last one for the night

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <h5 class="card-title color-mage">LavitzFrostboltz</h5>
               <p class="card-text">A weakaura for calculating the number of Frostbolts (or relevant Fireballs) a Mage can cast. It will determine your best spell you can use, and will notify you when you have a new rank available to train.</p>
               <p>Developed to be used for leveling more efficiently.</p>
-              <p class="card-text">View <a href="https://wago.io/z4LCSxBR4"> weakaura on wago.io &gt;&gt;&gt;</a></p>
+              <p class="card-text"><a href="https://wago.io/z4LCSxBR4">View weakaura on wago.io &gt;&gt;&gt;</a></p>
             </div>
           </div>
           <div class="card bg shadow">
