Add XpCounter Classic card

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
             </div>
           </div>
           <div class="card bg shadow">
+            <img src="https://cdn-wow.mmoui.com/preview/pvw71495_thumb.jpg" class="card-img-top" alt="LavitzFrostboltz preview" style="height: 10rem;">
+            <div class="card-body">
+              <h5 class="card-title color-epic">XpCounter Classic</h5>
+              <p class="card-text">Updated the old XpCounter addon from Vanilla to Classic. Future display updates coming soon.</p>
+              <p class="card-text"><a href="https://www.wowinterface.com/downloads/info25112-XpCounterClassic.html">View addon on WoWInterface &gt;&gt;&gt;</a></p>
+            </div>
+          </div>
+          <div class="card bg shadow">
             <div class="card-body">
               <h5 class="card-title color-common">Addons and Macros</h5>
               <p class="card-text">Here is a link to my current list of addons and macros. It's currently hosted on Github and presented as a zip but I will migrate it over to this site and add links to all the respective sources.</p>
@@ -75,7 +83,7 @@
           </div>
           <div class="card bg shadow">
             <div class="card-body">
-              <h5 class="card-title color-epic">Project "Speed"</h5>
+              <h5 class="card-title color-rare">Project "Speed"</h5>
               <h6 class="card-subtitle mb-2 text-muted" style="font-style: italic">Coming soon™</h6>
               <p class="card-text"><small>it'll be released when it's done :)</small></p>
               <!-- <a href="#" class="card-link">Card link</a> -->
