--- a/prebis.html
+++ b/prebis.html
@@ -31,7 +31,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/bis">Mage Pre-Raid BiS</a>
+          <a class="nav-item nav-link" href="/prebis">Mage Pre-Raid BiS</a>
           <a class="nav-item nav-link disabled" href="#">Macros</a>
           <a class="nav-item nav-link disabled" href="#">Blog</a>
           <div class="navright">
