Fix font on other browsers

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <div class="header">
     <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="/">
+        <!-- <img src="https://cdn.discordapp.com/banners/580899913077096448/9edcce14b24ec911abba8a73024928d0.jpg?size=512" alt="Lavitz.io" class="" id="logo" /> -->
         <img src="assets/lavitztext.png" alt="Lavitz.io" class="" id="logo" />
       </a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
