--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img class="card-img-top" src="assets/prebis-preview.jpg" alt="Pre-Raid BiS Preview">
             <div class="card-body">
               <h5 class="card-title color-mage">Mage Pre-Raid BiS - Phase One</h5>
-              <p class="card-text"><a href="bis.html">View &gt;&gt;&gt;</a></p>
+              <p class="card-text"><a href="/prebis">View &gt;&gt;&gt;</a></p>
             </div>
           </div>
           <div class="card bg shadow">
