--- a/prebis.html
+++ b/prebis.html
@@ -83,6 +83,10 @@
               <div>BoE World Drop</div>
             </li>
             <li class="list-group-item">
+              <div><a href="https://www.wowhead.com/item=18727&amp;domain=classic" class="q3">Crimson Felt Hat</a></div>
+              <div>UD Strat - Magistrate Barithilas</div>
+            </li>
+            <li class="list-group-item">
               <div><a href="https://www.wowhead.com/item=10504&amp;domain=classic" class="q2">Green Lens of Frozen
                 Wrath (+34 Frost)</a></div>
               <div>Engineering 265</div>
@@ -106,12 +110,12 @@
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              <div><a href="https://www.wowhead.com/item=12103&amp;domain=classic" class="q3">Star of Mystaria</a></div>
-              <div>Live Strath - Balnazzar</div>
+              <div><a href="https://www.wowhead.com/item=20037&amp;domain=classic" class="q3">Arcane Crystal Pendant</a></div>
+              <div><a href="https://www.wowhead.com/quest=8253&amp;domain=classic">Quest - Destroy Morphaz</a></div>
             </li>
             <li class="list-group-item">
-              <div><a href="https://www.wowhead.com/item=13141&amp;domain=classic" class="q3">Tooth of Gnarr</a></div>
-              <div>UBRS - General Drakkisath</div>
+              <div><a href="https://www.wowhead.com/item=12103&amp;domain=classic" class="q3">Star of Mystaria</a></div>
+              <div>Live Strath - Balnazzar</div>
             </li>
           </ul>
         </div>
@@ -126,8 +130,8 @@
               <div>BRD - Warder Stilgiss</div>
             </li>
             <li class="list-group-item">
-              <div><a href="https://www.wowhead.com/item=13141&amp;domain=classic" class="q3">Tooth of Gnarr</a></div>
-              <div>UBRS - General Drakkisath</div>
+              <div><a href="https://www.wowhead.com/item=18681&amp;domain=classic" class="q3">Burial Shawl</a></div>
+              <div>Scholo - Lord Alexei Barov</div>
             </li>
             <li class="list-group-item">
               <div><a href="https://www.wowhead.com/item=11624&amp;domain=classic" class="q3">Kentic Amice</a></div>
@@ -270,11 +274,6 @@
             <li class="list-group-item">
               <div><a href="https://www.wowhead.com/item=13956&amp;domain=classic" class="q3">Clutch of Andros</a></div>
               <div>Scholo - Kirtonos the Herald</div>
-            </li>
-            <li class="list-group-item">
-              <div><a href="https://www.wowhead.com/item=10019&amp;domain=classic" class="q2">Dreamweave Gloves</a>
-              </div>
-              <div>Tailoring 240</div>
             </li>
           </ul>
         </div>
