Update bis lists

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/prebis">Mage Pre-Raid BiS</a>
+            <a class="nav-item nav-link" href="/prebis">Mage Pre-MC BiS</a>
+            <a class="nav-item nav-link" href="/bis">Mage MC BiS</a>
           <a class="nav-item nav-link disabled" href="#">Macros</a>
           <a class="nav-item nav-link disabled" href="#">Blog</a>
           <div class="navright">
@@ -61,12 +62,19 @@
             </div>
           </div>
           <div class="card bg shadow">
-            <img class="card-img-top" src="assets/prebis-preview.jpg" alt="Pre-Raid BiS Preview">
+            <img class="card-img-top" src="assets/prebis-preview.jpg" alt="Pre-MC BiS Preview">
             <div class="card-body">
-              <h5 class="card-title color-mage">Mage Pre-Raid BiS - Phase One</h5>
+              <h5 class="card-title color-mage">Mage Pre-MC BiS - Phase One</h5>
               <p class="card-text"><a href="/prebis">View &gt;&gt;&gt;</a></p>
             </div>
           </div>
+          <div class="card bg shadow">
+              <img class="card-img-top" src="assets/prebis-preview.jpg" alt="MC BiS Preview">
+              <div class="card-body">
+                <h5 class="card-title color-mage">Mage MC BiS - Phase One</h5>
+                <p class="card-text"><a href="/bis">View &gt;&gt;&gt;</a></p>
+              </div>
+            </div>
           <div class="card bg shadow">
             <img src="https://cdn-wow.mmoui.com/preview/pvw71495_thumb.jpg" class="card-img-top" alt="LavitzFrostboltz preview" style="height: 10rem;">
             <div class="card-body">
@@ -96,6 +104,11 @@
       <div class="news">
         <h2 class="color-mage text-center">Mage News</h2>
         <div class="card">
+          <div class="card-body">
+            <p class="card-text">
+              <a href="">[TWEET] AMA news and updates to the BiS lists</a>
+            </p> 
+          </div>
           <div class="card-body">
             <p class="card-text">
               <a href="https://www.youtube.com/watch?v=ky3V7LJunEw">[VIDEO] 21 Reasons Why MAGE AoE Farming Is Harder In Classic vs Pservers</a>
