--- a/prebis.html
+++ b/prebis.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Lavitz">
   <meta name="description" content="Mage Pre-Raid BiS - Phase One">
   <meta name="keywords"
-    content="lavitz,classic wow,classic world of warcraft,mage,mage guide,mage tips,mage leveling,speedleveling,mage bis list">
+    content="lavitz,classic wow,classic world of warcraft,mage,mage guide,mage tips,mage leveling,speedleveling,mage bis list, pre raid bis, preraid bis list">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -31,7 +31,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/prebis">Mage Pre-Raid BiS</a>
+            <a class="nav-item nav-link" href="/prebis">Mage Pre-MC BiS</a>
+            <a class="nav-item nav-link" href="/bis">Mage MC BiS</a>
           <a class="nav-item nav-link disabled" href="#">Macros</a>
           <a class="nav-item nav-link disabled" href="#">Blog</a>
           <div class="navright">
@@ -52,15 +53,15 @@
   <div class="container guide-header">
     <div class="row">
       <div class="col-md-6">
-        <h3 class="title"><span class="color-mage">Mage</span> Phase One Pre-Raid BiS</h3>
+        <h3 class="title"><span class="color-mage">Mage</span> Pre-MC BiS</h3>
         <h4 class="subtitle">(and almost-BiS)</h4>
       </div>
       <div class="col-md-6">
         <h5>See also:</h5>
         <ul>
           <!-- <li><a href="/guides/equip-slot-ids">Equip slot IDs for Macros</a></li> -->
-          <li><a href="https://github.com/Lavitzio/Addons-and-Macros"><img src="assets/macro.png" width="40" height="40">Addons and Macros [Github for now]</a></li>
-          <li><a class="disabled" title="Coming soon!"><img src="assets/arcanistcrown.jpg" width="40" height="40"><span class="color-mage">Mage</span> Phase One Raid BiS [Coming Soon!]</a></li>
+          <li><a href="https://github.com/Lavitzio/Addons-and-Macros"><img src="assets/macro.png" class="icon">Addons and Macros [Github for now]</a></li>
+          <li><a href="/bis"><img class="icon p-1" src="assets/wep-mc.jpg" class="icon"><span class="color-mage">Mage</span> MC Raid BiS</a></li>
           <!--Aqual Quintessence / Douses for Ragnaros-->
         </ul>
       </div>
@@ -72,7 +73,7 @@
       <div class="col-lg-6 gear">
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_helm.png" alt="" width="40" height="40">
+            <img src="assets/icon_helm.png" alt="" class="icon">
             Head - <span class="enchant">+8 int</span>
             <a href="https://www.wowhead.com/item=11648&amp;domain=classic" class="q2">Lesser Arcanum of Voracity</a>
           </div>
@@ -105,7 +106,7 @@
         </div>
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_neck.png" alt="" width="40" height="40">
+            <img src="assets/icon_neck.png" alt="" class="icon">
             Neck
           </div>
           <ul class="list-group list-group-flush">
@@ -121,7 +122,7 @@
         </div>
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_shoulder.png" alt="" width="40" height="40">
+            <img src="assets/icon_shoulder.png" alt="" class="icon">
             Shoulder
           </div>
           <ul class="list-group list-group-flush">
@@ -150,7 +151,7 @@
         </div>
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_back.png" alt="" width="40" height="40">
+            <img src="assets/icon_back.png" alt="" class="icon">
             Back - <span class="enchant">+5 all resist</span>
             <a href="https://www.wowhead.com/spell=20014&amp;domain=classic" class="q2">Enchant Cloak - Greater
               Resistance</a>
@@ -179,7 +180,7 @@
         </div>
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_chest.png" alt="" width="40" height="40">
+            <img src="assets/icon_chest.png" alt="" class="icon">
             Chest - <span class="enchant">+4 all stats</span>
             <a href="https://www.wowhead.com/spell=20025&amp;domain=classic" class="q2">Enchant Chest - Greater
               Stats</a>
@@ -208,7 +209,7 @@
         </div>
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_wrist.png" alt="" width="40" height="40">
+            <img src="assets/icon_wrist.png" alt="" class="icon">
             Wrist - <span class="enchant">+7 int</span>
             <a href="https://www.wowhead.com/spell=20008&amp;domain=classic" class="q2">Enchant Bracer - Greater
               Intellect</a>
@@ -230,7 +231,7 @@
       <div class="col-lg-6 gear">
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_hands.png" alt="" width="40" height="40">
+            <img src="assets/icon_hands.png" alt="" class="icon">
             Hands - <span class="enchant">riding speed</span>
             <a href="https://www.wowhead.com/spell=13947&amp;domain=classic" class="q2">Enchant Gloves - Riding
               Skill</a>
@@ -254,7 +255,7 @@
         </div>
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_waist.png" alt="" width="40" height="40">
+            <img src="assets/icon_waist.png" alt="" class="icon">
             Waist
           </div>
           <ul class="list-group list-group-flush">
@@ -274,7 +275,7 @@
         </div>
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_legs.png" alt="" width="40" height="40">
+            <img src="assets/icon_legs.png" alt="" class="icon">
             Legs - <span class="enchant">+8 int</span>
             <a href="https://www.wowhead.com/item=11648&amp;domain=classic" class="q2">Lesser Arcanum of Voracity</a>
           </div>
@@ -297,7 +298,7 @@
         </div>
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_feet.png" alt="" width="40" height="40">
+            <img src="assets/icon_feet.png" alt="" class="icon">
             Feet - <span class="enchant">running speed</span>
             <a href="https://www.wowhead.com/spell=13890&amp;domain=classic" class="q2">Enchant Boots - Minor Speed</a>
           </div>
@@ -320,7 +321,7 @@
         </div>
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_rings.png" alt="" width="40" height="40">
+            <img src="assets/icon_rings.png" alt="" class="icon">
             Rings
           </div>
           <ul class="list-group list-group-flush">
@@ -346,7 +347,7 @@
         </div>
         <div class="card bg">
           <div class="card-header">
-            <img src="assets/icon_rings.png" alt="" width="40" height="40">
+            <img src="assets/icon_rings.png" alt="" class="icon">
             Trinkets
           </div>
           <ul class="list-group list-group-flush">
@@ -376,7 +377,7 @@
         <div class="col-lg-6 gear">
           <div class="card bg">
             <div class="card-header">
-              <img src="assets/icon_mainhand.png" alt="" width="40" height="40">
+              <img src="assets/icon_mainhand.png" alt="" class="icon">
               Main Hand - <span class="enchant">+30 spell power</span>
               <a href="https://www.wowhead.com/spell=22749&amp;domain=classic" class="q3">Enchant Weapon - Spell Power</a>
             </div>
@@ -401,7 +402,7 @@
           </div>
           <div class="card bg">
               <div class="card-header">
-                <img src="assets/icon_mainhand.png" alt="" width="40" height="40">
+                <img src="assets/icon_mainhand.png" alt="" class="icon">
                 Two Hand - <span class="enchant">+30 spell power</span>
                 <a href="https://www.wowhead.com/spell=22749&amp;domain=classic" class="q3">Enchant Weapon - Spell Power</a>
               </div>
@@ -432,7 +433,7 @@
         <div class="col-lg-6 gear">
             <div class="card bg">
                 <div class="card-header">
-                  <img src="assets/icon_offhand.png" alt="" width="40" height="40">
+                  <img src="assets/icon_offhand.png" alt="" class="icon">
                   Off Hand
                 </div>
                 <ul class="list-group list-group-flush">
@@ -448,7 +449,7 @@
               </div>
             <div class="card bg">
               <div class="card-header">
-                <img src="assets/icon_ranged.png" alt="" width="40" height="40">
+                <img src="assets/icon_ranged.png" alt="" class="icon">
                 Ranged
               </div>
               <ul class="list-group list-group-flush">
