--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="card">
           <div class="card-body">
             <p class="card-text">
-              <a href="">[TWEET] AMA news and updates to the BiS lists</a>
+              <a href="https://twitter.com/Lavitz_io/status/1163956410616569863">[TWEET] AMA news and updates to the BiS lists</a>
             </p> 
           </div>
           <div class="card-body">
