--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
           <div class="card-body">
             <p class="card-text">
               <a href="https://twitter.com/Lavitz_io/status/1163956410616569863">[TWEET] AMA news and updates to the BiS lists</a>
-            </p> 
+            </p>
           </div>
+        </div>
+        <div class="card">
           <div class="card-body">
             <p class="card-text">
               <a href="https://www.youtube.com/watch?v=ky3V7LJunEw">[VIDEO] 21 Reasons Why MAGE AoE Farming Is Harder In Classic vs Pservers</a>
