fix previews for bis lists

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
             </div>
           </div>
           <div class="card bg shadow">
-            <img class="card-img-top" src="assets/prebis-preview.jpg" alt="Pre-MC BiS Preview">
+            <img class="card-img-top" src="assets/preview-prebis.jpg" alt="Pre-MC BiS Preview">
             <div class="card-body">
               <h5 class="card-title color-mage">Mage Pre-MC BiS - Phase One</h5>
               <p class="card-text"><a href="/prebis">View &gt;&gt;&gt;</a></p>
             </div>
           </div>
           <div class="card bg shadow">
-              <img class="card-img-top" src="assets/prebis-preview.jpg" alt="MC BiS Preview">
+              <img class="card-img-top" src="assets/preview-bis.png" alt="MC BiS Preview">
               <div class="card-body">
                 <h5 class="card-title color-mage">Mage MC BiS - Phase One</h5>
                 <p class="card-text"><a href="/bis">View &gt;&gt;&gt;</a></p>
@@ -102,7 +102,7 @@
     </div>
     <div class="col-lg-4">
       <div class="news">
-        <h2 class="color-mage text-center">Mage News</h2>
+        <h2 class="color-mage text-center">News</h2>
         <div class="card">
           <div class="card-body">
             <p class="card-text">
